# pharos

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CONTRIBUTING.md  Cargo.toml  Containerfile.debug  Containerfile.docs  Containerfile.test  Containerfile.test-installer  GEMINI.md  PROGRESS.md  README.md  SECURITY.md  TODO.md  _config.yml  index.md  live_architecture.html  llms.txt  sandbox.yml  skill-pharos-seo.skill  velocity.md
.gemini/skills/skill-pharos-auditor/: SKILL.md
.gemini/skills/skill-pharos-auditor/references/: tools.md
.gemini/skills/skill-pharos-developer/: SKILL.md
.gemini/skills/skill-pharos-preflight/: SKILL.md
.gemini/skills/skill-pharos-seo/: SKILL.md
.gemini/skills/skill-pharos-seo/scripts/: audit-aio.js
.gemini/skills/skill-pharos-standardization/: SKILL.md
.gemini/skills/skill-pharos-sync/: SKILL.md
.github/workflows/: ci.yml  deploy-site.yml  dora-pulse.yml
artifacts/: marketing-engagement-plan.md  mcp-pharos-spec.md  mdb-results-ux-chart-plan.md  pharos-alias-mapping-plan.md  pharos-auth-decision-tree.md  pharos-installation-ux-plan.md  pharos-presence-fencing-spec.md  pharos-pulse-spec.md  pharos-query-expansion-spec.md  pharos-rfc-extension-proposal.md  pharos-sandbox-plan.md  pharos-scan-design.md  pharos-tui-design.md  pharos-web-console-plan.md  rfc2378.md  system-theme-sync-plan.md  web-mcp-alignment-plan.md
crates/pharos-client/: Cargo.toml
crates/pharos-client/src/: lib.rs
crates/pharos-console/: Cargo.toml
crates/pharos-console/src/: main.rs
crates/pharos-pulse/: Cargo.toml  Containerfile
crates/pharos-pulse/src/: main.rs
deploy/: README.md  sandbox.local.yml  sandbox.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DECISIONS.md  DORA.md  HOWTO.md  TESTING.md
mdb/: Cargo.toml
mdb/src/: main.rs
ph/: Cargo.toml
ph/src/: main.rs
pharos-console-web/: .gitignore  Containerfile  README.md  astro.config.mjs  package-lock.json  package.json  playwright.config.ts  server.mjs  test-server.mjs  vitest.config.ts
pharos-console-web/data/: auth_store.json
pharos-console-web/src/: env.d.ts  middleware.ts
pharos-console-web/src/actions/: index.ts
pharos-console-web/src/components/: FormattedDate.astro
pharos-console-web/src/features/auth/: LoginForm.astro  UnifiedAuthGateway.astro  auth-config.ts  jwt-logic.test.ts  jwt-logic.ts  password-store.test.ts  password-store.ts  session-logic.ts
pharos-console-web/src/features/mdb/add/: MdbAddForm.astro  add-logic.test.ts  add-logic.ts
pharos-console-web/src/features/mdb/search/: MdbResultsChart.astro  MdbResultsGrid.astro  MdbSearchForm.astro  search-logic.test.ts  search-logic.ts
pharos-console-web/src/features/pulse/monitor/: PulseMonitor.astro  pulse-logic.test.ts  pulse-logic.ts
pharos-console-web/src/features/sandbox/: ResourcePreview.astro  SandboxTerminal.astro
pharos-console-web/src/layouts/: ConsoleLayout.astro
pharos-console-web/src/lib/: pharos.test.ts  pharos.ts
pharos-console-web/src/pages/: add-node.astro  change-password.astro  index.astro  login.astro  mcp.ts
pharos-console-web/src/pages/mdb/: [hostname].astro  add.astro  index.astro
pharos-console-web/src/pages/pulse/: index.astro
pharos-console-web/src/styles/: global.css
pharos-console-web/test-results/: .last-run.json
pharos-console-web/tests-e2e/: add-node.test.ts  guest-access.test.ts  login.test.ts  logout-regression.test.ts  mcp.test.ts  redirect.test.ts  sandbox.test.ts
pharos-scan/: Cargo.toml  Containerfile
pharos-scan/src/: engine.rs  fingerprint.rs  lib.rs  main.rs  oui.rs
pharos-server/: Cargo.toml  Containerfile
pharos-server/src/: auth.rs  lib.rs  main.rs  metrics.rs  middleware.rs  protocol.rs  storage.rs  sync.rs  tui.rs
pharos-server/tests/: middleware_integration.rs  rbac_integration.rs
scripts/: gen-sandbox-certs.sh  generate-dora.sh  install.sh  pre-flight.sh
website/: README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
website/.astro/: content-modules.mjs
website/src/components/: DarkModeToggle.astro  DoraMetrics.astro  MermaidRenderer.astro  SandboxSnippet.astro  TieredTabs.astro
website/src/content/: config.ts
website/src/content/docs/: architecture.mdx  automation.mdx  cli-clients.mdx  configuration.mdx  console.mdx  howto.mdx  install.mdx  integrations.mdx  network-scan.mdx  server-setup.mdx  showcase.mdx
website/src/layouts/: BaseLayout.astro
website/src/pages/: index.astro
website/src/pages/docs/: [...slug].astro  index.astro
website/src/styles/: global.css
website/src/utils/: remarkStripPrologue.mjs
