# ========================================================================
# Project: pharos
# Component: Workspace Root
# File: Cargo.toml
# Author: Richard D. (https://github.com/iamrichardd)
# License: AGPL-3.0 (See LICENSE file for details)
# * Purpose (The "Why"):
# This is the root Cargo workspace configuration for the pharos project.
# * Traceability:
# Related to Task 1.1
# ========================================================================

[workspace]
members = [
    "pharos-server",
    "ph",
    "mdb",
    "crates/pharos-client",
    "pharos-scan",
    "crates/pharos-pulse",
]
resolver = "2"
