# ========================================================================
# Project: pharos
# Component: CLI-mdb
# File: mdb/Cargo.toml
# Author: Richard D. (https://github.com/iamrichardd)
# License: AGPL-3.0 (See LICENSE file for details)
# * Purpose (The "Why"):
# This is the Cargo configuration for the 'mdb' CLI client.
# * Traceability:
# Related to Task 3.2
# ========================================================================

[package]
name = "mdb"
version = "0.1.0"
edition = "2024"

[dependencies]
ssh-key = { version = "0.6", features = ["crypto"] }
signature = "2.2"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
