# ========================================================================
# Project: pharos
# Component: CLI-ph
# File: ph/Cargo.toml
# Author: Richard D. (https://github.com/iamrichardd)
# License: AGPL-3.0 (See LICENSE file for details)
# * Purpose (The "Why"):
# This is the Cargo configuration for the 'ph' CLI client.
# * Traceability:
# Related to Task 3.1
# ========================================================================

[package]
name = "ph"
version = "1.3.0"
edition = "2024"

[dependencies]
pharos-client = { path = "../crates/pharos-client" }
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0"
log = "0.4"

