[package]
name = "pharos-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"
sysinfo = "0.33"
warp = "0.3"
