# ========================================================================
# Project: pharos
# Component: Server Core
# File: pharos-server/Cargo.toml
# Author: Richard D. (https://github.com/iamrichardd)
# License: AGPL-3.0 (See LICENSE file for details)
# * Purpose (The "Why"):
# This is the Cargo configuration for the 'pharos-server' backend.
# * Traceability:
# Related to Task 2.1
# ========================================================================

[package]
name = "pharos-server"
version = "1.2.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ldap3 = "0.11"
ssh-key = { version = "0.6", features = ["crypto"] }
signature = "2.2"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"
sysinfo = "0.33"
warp = "0.3"

[dev-dependencies]
tempfile = "3"
